test/e2e/fail_compile/type_errors/whole_term_unused_runtime_let.cst
runtime fn source() -> num { 1 }

fn value() -> num {
    let unused: runtime num = source();
    1
}

fn main() -> num {
    value()
}
